[package]
name = "geocart"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A bridge between geographic and cartesian coordinates."
readme = "./README.md"
repository = "https://github.com/HectorMRC/geocart"

[dependencies]
serde = { version = "1.0.217", features = ["derive"], optional = true }
num-traits = "0.2.19"

[dev-dependencies]
geocart = { path = ".", features = ["f64", "serde"] }

[features]
default = ["f64"]
f64 = []
serde = ["dep:serde"]

